[project]
name = "leads-to-raags"
version = "0.1.0"
description = "Analyze Western melodies and suggest corresponding Hindustani and Carnatic raags"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Dheeraj Chand", email = "dheeraj@dheerajchand.com" }
]

# Runtime dependencies
dependencies = [
    "music21>=9.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
